Added function to the button.

--- a/views/index.pug
+++ b/views/index.pug
@@ -3,4 +3,14 @@ extends layout
 block content
   h1= title
   p Hello My Name is #{title}
-  button(type="button", class="btn btn-secondary") Sample Button
+  button(type="button", class="btn btn-secondary" onclick="faster()") Sample Button
+  div(id="faster") add in extra
+  script. 
+    let value = 1;
+    let amt = 2;
+    function faster(){
+      amt = amt * 2;
+      value = value + amt;
+      console.log(value);
+      document.getElementById("faster").innerHTML = "Faster " + value + " times " + amt;
+    }
