Created the Search page and working with the loop

--- a/views/index.pug
+++ b/views/index.pug
@@ -5,6 +5,7 @@ block content
   p Hello My Name is #{title}
   button(type="button", class="btn btn-secondary" onclick="faster()") Sample Button
   div(id="faster") add in extra
+  a(href="/lumber") Search Link
   script. 
     let value = 1;
     let amt = 2;
